force-app/main/default/objects/Child_Removal__c/fields/Removal_Age__c.field-meta.xml
<CustomField>
    <fullName>Removal_Age__c</fullName>
    <formula>IF( Removal_Date__c = null,null,
IF( MONTH(Removal_Date__c) &gt; MONTH( Child__r.Date_of_Birth__c ), TEXT(YEAR(Removal_Date__c) - YEAR(Child__r.Date_of_Birth__c)) &amp; &quot; Years &quot; , IF(( MONTH(Removal_Date__c) = MONTH( Child__r.Date_of_Birth__c)) &amp;&amp;(DAY(Removal_Date__c) &gt;= DAY(Child__r.Date_of_Birth__c)) ,TEXT(YEAR(Removal_Date__c) - YEAR(Child__r.Date_of_Birth__c)) &amp; &quot; Years &quot; , TEXT( YEAR(Removal_Date__c) - YEAR(Child__r.Date_of_Birth__c) - 1 )&amp; &quot; Years &quot;)  )) &amp; 

IF( MONTH (Removal_Date__c) = MONTH (Child__r.Date_of_Birth__c),
IF(DAY(Removal_Date__c) &gt;= DAY(Child__r.Date_of_Birth__c), &quot;&quot;,&quot;11 Months&quot;),
IF(MONTH(Child__r.Date_of_Birth__c) &gt; MONTH(Removal_Date__c),
TEXT(12 - (MONTH(Child__r.Date_of_Birth__c) - MONTH(Removal_Date__c))) &amp; &quot; Months&quot;,
TEXT(MONTH(Removal_Date__c) - MONTH(Child__r.Date_of_Birth__c)) &amp; &quot; Months&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Removal Age</label>
    <type>Text</type>
</CustomField>