force-app/main/default/objects/Child_Removal__c/fields/Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date__c</fullName>
    <label>Removal Date</label>
    <type>Date</type>
</CustomField>