force-app/main/default/objects/Child_Removal__c/fields/Removal_DateF__c.field-meta.xml
<CustomField>
    <fullName>Removal_DateF__c</fullName>
    <formula>IF( NOT(ISBLANK(Removal_End_Date_Time__c)) ,  
TEXT(MONTH(Removal_Date__c))+&apos;/&apos;+TEXT(DAY(Removal_Date__c))+&apos;/&apos;+TEXT(YEAR(Removal_Date__c))+&apos; - &apos;+  
TEXT(MONTH(DATEVALUE(Removal_End_Date_Time__c)))+&apos;/&apos;+TEXT(DAY(DATEVALUE(Removal_End_Date_Time__c)))+&apos;/&apos;+
TEXT(YEAR(DATEVALUE(Removal_End_Date_Time__c))), TEXT(MONTH(Removal_Date__c))+&apos;/&apos;+TEXT(DAY(Removal_Date__c))+&apos;/&apos;+TEXT(YEAR(Removal_Date__c))+&apos; - Open&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Removal Date</label>
    <type>Text</type>
</CustomField>