force-app/main/default/objects/Child_Removal__c/fields/Removal_Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removal_Exit_Reason__c</fullName>
    <label>Removal Exit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>