force-app/main/default/objects/Child_Removal__c/fields/Removal_Time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Time__c</fullName>
    <label>Removal Time</label>
    <type>Time</type>
</CustomField>