force-app/main/default/objects/Child_Removal__c/fields/Removal_Type__c.field-meta.xml
<CustomField>
    <fullName>Removal_Type__c</fullName>
    <label>Removal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Judicial Determination</fullName>
            </value>
            <value>
                <fullName>Children with Disabilities Voluntary Placement</fullName>
            </value>
            <value>
                <fullName>Time Limited Voluntary Placement</fullName>
            </value>
            <value>
                <fullName>Enhanced Aftercare Voluntary Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>