force-app/main/default/objects/Child_Removal__c/fields/Shelter_Authorization_Completed__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Authorization_Completed__c</fullName>
    <label>Shelter Authorization Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>