force-app/main/default/objects/Child_Removal__c/fields/Visual_Comments__c.field-meta.xml
<CustomField>
    <fullName>Visual_Comments__c</fullName>
    <label>Visual Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>