force-app/main/default/objects/Child_Removal__c/fields/Visual_Diagnosed_Diability__c.field-meta.xml
<CustomField>
    <fullName>Visual_Diagnosed_Diability__c</fullName>
    <label>Visual Diagnosed Diability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>