force-app/main/default/objects/Child_Removal__c/fields/Visual_End_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Visual_End_Resolution_Date__c</fullName>
    <label>Visual End/Resolution Date</label>
    <type>Date</type>
</CustomField>