force-app/main/default/objects/Child_Removal__c/fields/Visual_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Visual_Evaluation_Date__c</fullName>
    <label>Visual Evaluation Date</label>
    <type>Date</type>
</CustomField>