force-app/main/default/objects/Child_Removal__c/fields/Visual_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Visual_Special_Needs__c</fullName>
    <label>Visual Special Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age is &gt; 6</fullName>
            </value>
            <value>
                <fullName>Emotional Disability</fullName>
            </value>
            <value>
                <fullName>High Risk of Physical or Mental Disease</fullName>
            </value>
            <value>
                <fullName>Mentally Retarded</fullName>
            </value>
            <value>
                <fullName>Other Disability</fullName>
            </value>
            <value>
                <fullName>Physical Disability</fullName>
            </value>
            <value>
                <fullName>Racial or Ethnic Factor</fullName>
            </value>
            <value>
                <fullName>Sibling Group</fullName>
            </value>
            <value>
                <fullName>Feeding Tube</fullName>
            </value>
            <value>
                <fullName>Hearing Disability</fullName>
            </value>
            <value>
                <fullName>Learning Disability</fullName>
            </value>
            <value>
                <fullName>Visual Disability</fullName>
            </value>
            <value>
                <fullName>Developmentally Delayed</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Apnea Monitor</fullName>
            </value>
            <value>
                <fullName>Car Safety Seat</fullName>
            </value>
            <value>
                <fullName>Crutches / Cane / Walker</fullName>
            </value>
            <value>
                <fullName>Deaf</fullName>
            </value>
            <value>
                <fullName>Language Interpreter Required</fullName>
            </value>
            <value>
                <fullName>Hearing Disability / Hearing Aid (Left)</fullName>
            </value>
            <value>
                <fullName>Hearing Disability / Hearing Aid (Right)</fullName>
            </value>
            <value>
                <fullName>Glasses / Contacts</fullName>
            </value>
            <value>
                <fullName>Nightmares</fullName>
            </value>
            <value>
                <fullName>Orthopedic Appliance</fullName>
            </value>
            <value>
                <fullName>Physical Disability / Requires Wheelchair</fullName>
            </value>
            <value>
                <fullName>Special Diet (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>