force-app/main/default/objects/Child_Removal__c/fields/Visual_Start_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Visual_Start_Diagnosis_Date__c</fullName>
    <label>Visual Start/ Diagnosis Date</label>
    <type>Date</type>
</CustomField>