force-app/main/default/objects/Child_Removal__c/fields/Where_is_the_child_going_to__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_child_going_to__c</fullName>
    <inlineHelpText>Where is the child going to placed on entry?</inlineHelpText>
    <label>Where is the child going to placed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Correctional Facility</fullName>
            </value>
            <value>
                <fullName>Agency Foster Home</fullName>
            </value>
            <value>
                <fullName>Detention</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Kinship Home (Relative or &apos;Fictive Kin&apos;)</fullName>
            </value>
            <value>
                <fullName>Medical Hospital</fullName>
            </value>
            <value>
                <fullName>Noncustodial Parent</fullName>
            </value>
            <value>
                <fullName>Psychiatric Hospital</fullName>
            </value>
            <value>
                <fullName>Private Treatment Foster Home</fullName>
            </value>
            <value>
                <fullName>Runaway</fullName>
            </value>
            <value>
                <fullName>Residential Treatment Center</fullName>
            </value>
            <value>
                <fullName>Supervised Independent Living</fullName>
            </value>
            <value>
                <fullName>Therapeutic Group Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>