force-app/main/default/objects/Child_Removal__c/recordTypes/Child_Removal.recordType-meta.xml
<RecordType>
    <fullName>Child_Removal</fullName>
    <active>true</active>
    <label>Child Removal</label>
</RecordType>