force-app/main/default/objects/Child_Removal__c/recordTypes/Read_Only_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Record_type</fullName>
    <active>true</active>
    <label>Read Only Record type</label>
</RecordType>