force-app/main/default/objects/Child_Removal__c/validationRules/Check_Service_Case_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Service_Case_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Service_Case__r.Status__c, &apos;Close&apos;)</errorConditionFormula>
    <errorMessage>Cannot create/Edit in Child Removal because Service Case is closed</errorMessage>
</ValidationRule>