force-app/main/default/objects/Child_Removal__c/validationRules/Removal_Date_As_Read_Only_While_Creating.validationRule-meta.xml
<ValidationRule>
    <fullName>Removal_Date_As_Read_Only_While_Creating</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISBLANK( Removal_End_Date_Time__c ))</errorConditionFormula>
    <errorDisplayField>Removal_End_Date_Time__c</errorDisplayField>
    <errorMessage>Not allowed to edit this field while creating child removal.</errorMessage>
</ValidationRule>