force-app/main/default/objects/Child_Removal__c/validationRules/Removal_Exit_Reason_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Removal_Exit_Reason_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISBLANK( Removal_Exit_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Removal_Exit_Reason__c</errorDisplayField>
    <errorMessage>Not allowed to edit this field while creating child removal.</errorMessage>
</ValidationRule>